--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -5,3 +5,12 @@ a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
 
 a:active { text-decoration: none; }
+
+
+.title {
+    font-size: 26px;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #050d18;
+  }
